--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "phantom": "^3.2.1",
     "proxy-addr": "^1.1.3",
     "redis": "^2.6.3",
-    "url-search-params": "^0.6.1"
+    "url-search-params": "^0.6.1",
+    "websocket": "^1.0.24"
   },
   "dependencies": {
     "body-parser": "^1.15.2"
